macros/tests/sig2-fail.rs
#[macros::entry]
fn e_main(handle: (), table: (), extra: (), extra2: ()) {}

fn main() {}
